<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <com.santalu.maskedittext.MaskEditText
        android:id="@+id/inputTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/alfa_slab_one"
        android:hint="@string/inputTelefone"
        android:inputType="phone"
        app:met_mask="+55(##) #####-####"
        android:paddingStart="10dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/inputCelular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEndereco" />

    <com.santalu.maskedittext.MaskEditText
        android:id="@+id/inputCelular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="325dp"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/alfa_slab_one"
        android:hint="@string/inputCelular"
        android:inputType="phone"
        app:met_mask="+55(##) #####-####"
        android:paddingStart="10dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTelefone" />

    <EditText
        android:id="@+id/inputNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/alfa_slab_one"
        android:hint="@string/inputNome"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSenha2" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/alfa_slab_one"
        android:hint="@string/inputEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/inputEndereco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNome" />

    <EditText
        android:id="@+id/inputEndereco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/alfa_slab_one"
        android:hint="@string/inputEndereco"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/inputTelefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <EditText
        android:id="@+id/inputSenha2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/alfa_slab_one"
        android:hint="@string/inputSenhaNovamente"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/inputNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSenha" />

    <EditText
        android:id="@+id/inputSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/alfa_slab_one"
        android:hint="@string/inputSenha"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/inputSenha2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsuario" />

    <TextView
        android:id="@+id/txtCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/tlPrincipalTextCadastro"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/alfa_slab_one"
        android:hint="@string/inputLogin"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/inputSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCadastro" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="85dp"
        android:buttonTint="#FFFFFF"
        android:checked="false"
        android:text="@string/txtCheckBox"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCelular" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="142dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="86dp"
        android:background="@drawable/edit_round"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/btnCadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />



</androidx.constraintlayout.widget.ConstraintLayout>